# aoc-auto

./: Cargo.toml  README.md
src/: lib.rs  template.rs
