[package]
name = "aoc-auto"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Öberg <AlexanderReaper7@noreply.users.github.com"]
license = "MIT"
description = "Automatically imports your solutions to Advent of Code challenges for easy running."
repository = "https://github.com/AlexanderReaper7/aoc-auto"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.33"
syn = { version = "2", features = ["full", "parsing"] }
prettyplease = "0.2.15"
